@@ -1,5 +1,14 @@
 2006-06-01  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/glib.symbols:
+	* glib/gmain.h: 
+	* glib/gmain.c: Add two new functions, 
+	g_source_set_funcs and g_source_is_destroyed,
+	that will be necessary to solve thread-safety
+	issues with idles in GTK+.  (#321886, Chris Wilson)
+
+2006-06-01  Matthias Clasen  <mclasen@redhat.com>
+
 	* glib/giochannel.c (g_io_channel_write_chars): Avoid
 	running in an assertion with small writes.  (#343566, Chris
 	Wilson)
