@@ -177,19 +177,21 @@ gint     g_main_context_check    (GMainContext *context,
 				  gint          n_fds);
 void     g_main_context_dispatch (GMainContext *context);
 
-void      g_main_context_set_poll_func (GMainContext *context,
-					GPollFunc     func);
+void     g_main_context_set_poll_func (GMainContext *context,
+				       GPollFunc     func);
 GPollFunc g_main_context_get_poll_func (GMainContext *context);
 
 /* Low level functions for use by source implementations
  */
-void g_main_context_add_poll      (GMainContext *context,
-				   GPollFD      *fd,
-				   gint          priority);
-void g_main_context_remove_poll   (GMainContext *context,
-				   GPollFD      *fd);
+void     g_main_context_add_poll    (GMainContext *context,
+				     GPollFD      *fd,
+				     gint          priority);
+void     g_main_context_remove_poll (GMainContext *context,
+				     GPollFD      *fd);
 
-int g_main_depth (void);
+gint     g_main_depth               (void);
+GSource *g_main_current_source      (void);
+
 
 /* GMainLoop: */
 
@@ -223,11 +225,14 @@ guint    g_source_get_id          (GSource        *source);
 
 GMainContext *g_source_get_context (GSource       *source);
 
-void g_source_set_callback          (GSource              *source,
-				     GSourceFunc           func,
-				     gpointer              data,
-				     GDestroyNotify        notify);
+void     g_source_set_callback    (GSource        *source,
+				   GSourceFunc     func,
+				   gpointer        data,
+				   GDestroyNotify  notify);
 
+void     g_source_set_funcs       (GSource        *source,
+                                   GSourceFuncs   *funcs);
+gboolean g_source_is_destroyed    (GSource        *source);
 
 /* Used to implement g_source_connect_closure and internally*/
 void g_source_set_callback_indirect (GSource              *source,
